--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
+    "bootstrap": "^5.1.3",
     "framer-motion": "^5.0.0",
     "next": "^12.0.8",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scroll": "^1.8.4",
     "smooth-scroll": "^16.1.3",
     "styled-jsx-plugin-postcss": "^4.0.1"
