--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
+    "@maticnetwork/wallet-widget": "^1.3.8",
     "bootstrap": "^5.1.3",
     "framer-motion": "^5.0.0",
     "next": "^12.0.8",
